kubernetes/security/kguardian/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
  namespace: security
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - kguardian.whoverse.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kguardian-frontend
          port: 5173
